@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-27T01:18:57Z",
+  "timestamp" : "2022-03-27T08:19:44Z",
   "count_outdated" : 479,
   "uniques_outdated" : 255,
-  "count" : 1158,
-  "uniques" : 302,
+  "count" : 1159,
+  "uniques" : 303,
   "clones" : [
     {
       "timestamp": "2022-03-14T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-03-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-03-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
