@@ -1,6 +1,6 @@
 {
-  "count": 679,
-  "uniques": 30,
+  "count": 680,
+  "uniques": 31,
   "clones": [
     {
       "timestamp": "2022-03-14T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-03-24T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-03-27T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
